@@ -280,11 +280,12 @@ public:
    * it does not finish due to a @c break or a @c return or an exception, then
    * the entire connection becomes effectively unusable.
    *
-   * Querying in this way is faster than the @c exec() methods, at least for
-   * larger results, and you can start processing rows before the full result
-   * is in.  Also, @c stream() scales better in terms of memory usage.  Where
-   * @c exec() reads the entire result into memory at once, @c stream() will
-   * read and process one row at at a time.
+   * Querying in this way is faster than the @c exec() methods for larger
+   * results (but probably slower for small ones).  Also, you can start
+   * processing rows before the full result is in.  Also, @c stream() scales
+   * better in terms of memory usage.  Where @c exec() reads the entire result
+   * into memory at once, @c stream() will read and process one row at at a
+   * time.
    *
    * Your query executes as part of a COPY command, not as a stand-alone query,
    * so there are limitations to what you can do in the query.  It can be
