@@ -1,6 +1,7 @@
 7.2.1
  - Fix infinite loop in converting `char *` to string. (#377)
  - Deprecated `namedclass`.
+ - Convert an entire row using `row::as<type...>()`.
  - Internal rework of `field::to()` and `field::as()` functions.
  - Some more warning options in maintainer mode.
 7.2.0
